archive/applications/backbone/utility/storage/storage-temp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-temp-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-path-temp-provisioner
  namespace: local-path-temp-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-path-temp-provisioner
  template:
    metadata:
      labels:
        app: local-path-temp-provisioner
    spec:
      serviceAccountName: local-path-provisioner-service-account
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: local-path-temp-provisioner
        image: rancher/local-path-provisioner:v0.0.36@sha256:1eba82e9c386038b4af6d69cca7519fac738c28c42735ed48ce70c882ad0d80f
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
        command:
        - local-path-provisioner
        - --debug
        - start
        - --config
        - /etc/config/config.json
        - --provisioner-name
        - rancher.io/local-path-temp
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config/
      volumes:
      - name: config-volume
        configMap:
          name: local-path-temp-config
