archive/applications/backbone/utility/storage/network-policy-temp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy-temp
  namespace: local-path-temp-storage
spec:
  endpointSelector:
    matchLabels:
      app: local-path-temp-provisioner
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: coredns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: local-path-temp-storage
  - toEntities:
    - kube-apiserver
